# mini-stabble

./: Anchor.toml  Cargo.toml  README.md  SOCIAL_POSTS.md
programs/mini-stabble/: Cargo.toml
programs/mini-stabble/src/: constants.rs  errors.rs  lib.rs
programs/mini-stabble/src/instructions/: add_token_to_pool.rs  deposit.rs  deposit_unbalanced.rs  initialize_stable_pool.rs  initialize_weighted_pool.rs  mod.rs  stable_deposit.rs  stable_swap.rs  swap.rs
programs/mini-stabble/src/math/: fixed.rs  mod.rs  stable.rs  weighted.rs
programs/mini-stabble/src/state/: pool.rs
sdk/: package.json
sdk/src/: scanner.ts  spotPrice.ts
tests/: mini-stabble.ts
