[workspace]
members = [
    "programs/*",
    "libraries/*"
]
resolver = "2"

[workspace.dependencies]
fixed = "1.28"
num-traits = "0.2"
typenum = "1.17"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
